// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`incrementAsync 1`] = `
Object {
  "index": 300,
  "type": "MENU_ITEM",
  "value": Object {
    "#data": Object {
      "children": Array [
        "Increment Async",
      ],
      "props": Object {
        "children": undefined,
        "onClick": Object {
          "#data": Object {
            "args": Array [
              Object {
                "#oid": "extrasDispatch",
              },
            ],
            "func": Object {
              "#oid": "runIncrementAsync",
            },
            "self": undefined,
          },
          "#type": "Bind",
        },
      },
      "type": "button",
    },
    "#type": "ReactElement",
  },
}
`;

exports[`incrementIfOdd 1`] = `
Object {
  "index": 400,
  "type": "MENU_ITEM",
  "value": Object {
    "#data": Object {
      "children": Array [
        "Increment if odd",
      ],
      "props": Object {
        "children": undefined,
        "onClick": Object {
          "#data": Object {
            "args": Array [
              Object {
                "#oid": "extrasDispatch",
              },
              "INCREMENT",
              undefined,
            ],
            "func": Object {
              "#oid": "_signal",
            },
            "self": null,
          },
          "#type": "Bind",
        },
      },
      "type": "button",
    },
    "#type": "ReactElement",
  },
}
`;

exports[`incrementIfOdd 2`] = `
Object {
  "index": 400,
  "type": "MENU_ITEM",
  "value": Object {
    "#data": Object {
      "children": Array [
        "Increment if odd",
      ],
      "props": Object {
        "children": undefined,
        "onClick": Object {
          "#oid": "nop",
        },
      },
      "type": "button",
    },
    "#type": "ReactElement",
  },
}
`;
